--- a/_data/other-skills.yml
+++ b/_data/other-skills.yml
@@ -1,7 +1,39 @@
-- name: Adobe Photoshop
-  percentage: 95
-  color: info
+- name: Adaptability/Flexibility
+  percentage: 75
+  color: success
 
-- name: Adobe Illustrator
+- name: Attention to Detail
+  percentage: 85
+  color: success
+ 
+- name: Communication
+  percentage: 85
+  color: success
+
+- name: Creativity
+  percentage: 75
+  color: success
+
+- name: Integrity/Honesty
   percentage: 90
+  color: success
+ 
+- name: Leadership
+  percentage: 80
+  color: success
+
+- name: Problem Solving
+  percentage: 80
+  color: success
+
+- name: Resilience
+  percentage: 80
+  color: success
+
+- name: Teamwork
+  percentage: 80
+  color: success
+
+- name: Work Ethic
+  percentage: 85
   color: success
