--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ### Site Settings ###
 title               : Michal Ferber
 description         : >-
-                      I turn coffee :coffee: into code, (and Mountain Dew <img src="https://cdn3.emoji.gg/emojis/Mountaindew.png" width="24px" height="24px" alt="Mountain Dew">), use tabs over spaces and never broke production.
+                      I turn coffee :coffee: (and Mountain Dew <img src="https://cdn3.emoji.gg/emojis/Mountaindew.png" width="24px" height="24px" alt="Mountain Dew">) into code, use tabs over spaces and never brake production.
 baseurl             : ""            # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 repository          : MichalAFerber/michalferber      # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
 remote_theme        : yousinix/portfolYOU
