--- a/_data/programming-skills.yml
+++ b/_data/programming-skills.yml
@@ -1,11 +1,39 @@
 - name: HTML5/CSS3
+  percentage: 95
+  color: success
+
+- name: C#
   percentage: 90
+  color: success
+
+- name: JavaScript
+  percentage: 85
+  color: success
+
+- name: Python
+  percentage: 85
+  color: success
+
+- name: SQL
+  percentage: 80
+  color: success
+
+- name: Visual Basic
+  percentage: 70
+  color: info
+
+- name: PHP
+  percentage: 65
+  color: info
+
+- name: Ruby
+  percentage: 60
+  color: info
+
+- name: Rust
+  percentage: 40
   color: danger
 
 - name: Go
-  percentage: 80
-  color:
-
-- name: Python
-  percentage: 70
-  color: secondary
+  percentage: 30
+  color: danger
