Updating config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ### Site Settings ###
 title               : Michal Ferber
 description         : >-
-                      I turn coffee <img src="https://cdn3.emoji.gg/emojis/26539-coffe.png" width="24px" height="24px" alt="Coffee"> (and Mountain Dew <img src="https://cdn3.emoji.gg/emojis/Mountaindew.png" width="24px" height="24px" alt="Mountain Dew">) into code, use tabs over spaces and never brake production.
+                      I turn coffee <img src="https://cdn3.emoji.gg/emojis/26539-coffe.png" width="30px" height="30px" alt="Coffee"> (and Mountain Dew <img src="https://cdn3.emoji.gg/emojis/Mountaindew.png" width="24px" height="24px" alt="Mountain Dew">) into code, use tabs over spaces and never brake production.
 baseurl             : ""            # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 repository          : MichalAFerber/michalferber      # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
 remote_theme        : yousinix/portfolYOU
@@ -78,9 +78,9 @@ analytics:
 # See https://www.buymeacoffee.com/
 buymeacoffee:
   enabled: true
-  username: MichalAFerber
-  color: "#007bff"
-  message: "Thank you for visiting."                    # Message to be displayed aside from the button for a few seconds.
+  username: TechGuyWithABeard
+  color: "#FFDD00"
+  message:                     # Message to be displayed aside from the button for a few seconds.
   description: "Support me on Buy me a coffee!"
 
 
