Fixed Youtube link

--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ author:
 # twitch            : your_username
   twitter           : MichalAFerber
 # vimeo             : your_username
-  youtube           : MichalAFerber
+  youtube           : "@MichalAFerber"
   keybase           : MichalAFerber
   telegram           : MichalAFerber
 
